--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">nimble</string>
+    <string name="instructions_reset_password_screen">Enter your email to receive instructions for resetting your password.</string>
 </resources>
